--- a/medusa-blog/package.json
+++ b/medusa-blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medusa-starter-default",
+  "name": "medusa-blog",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
   "author": "Sebastian Rindom <skrindom@gmail.com>",
@@ -22,12 +22,10 @@
     "seed": "cross-env medusa seed -f ./data/seed.json",
     "start": "cross-env npm run build && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
-    "dev": "cross-env npm run build:server && medusa develop",
-    "develop": "npx @medusajs/medusa-cli develop"
+    "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
     "@medusajs/admin": "^7.1.1",
-    "@medusajs/cache-inmemory": "^1.8.8",
     "@medusajs/cache-redis": "^1.8.8",
     "@medusajs/event-bus-local": "^1.9.6",
     "@medusajs/event-bus-redis": "^1.8.9",
@@ -40,18 +38,17 @@
     "cors": "^2.8.5",
     "dotenv": "16.0.3",
     "express": "^4.17.2",
-    "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
-    "medusa-payment-manual": "^1.0.24",
-    "medusa-payment-stripe": "^6.0.4",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
+  },
+  "peerDependencies": {
+    "@medusajs/medusa": "^1.16.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
-    "@medusajs/medusa-cli": "^1.3.16",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
