blog endpoints, repository and services

--- a/medusa-blog/tsconfig.json
+++ b/medusa-blog/tsconfig.json
@@ -25,6 +25,12 @@
     "**/__fixtures__",
     "node_modules",
     "build",
-    ".cache"
+    ".cache",
+    "dist",
+    "tests",
+    "**/*.spec.js",
+    "**/*.spec.ts",
+    "node_modules",
+    ".eslintrc.js"
   ]
 }
