--- a/medusa-blog/package.json
+++ b/medusa-blog/package.json
@@ -22,7 +22,8 @@
     "seed": "cross-env medusa seed -f ./data/seed.json",
     "start": "cross-env npm run build && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
-    "dev": "cross-env npm run build:server && medusa develop"
+    "dev": "cross-env npm run build:server && medusa develop",
+    "prepare": "cross-env NODE_ENV=production npm run build:server && medusa-admin bundle"
   },
   "dependencies": {
     "@medusajs/admin": "^7.1.1",
@@ -43,7 +44,9 @@
     "typeorm": "^0.3.16"
   },
   "peerDependencies": {
-    "@medusajs/medusa": "^1.16.0"
+    "@medusajs/medusa": "^1.16.0",
+    "react": "^18.2.0",
+    "react-router-dom": "^6.13.0"  
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
