--- a/medusa-blogtest/package.json
+++ b/medusa-blogtest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medusa-blog",
+  "name": "medusa-blogtest",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
   "author": "Sebastian Rindom <skrindom@gmail.com>",
@@ -26,36 +26,40 @@
     "prepare": "cross-env NODE_ENV=production npm run build:server && medusa-admin bundle"
   },
   "dependencies": {
-    "@medusajs/admin": "^7.1.1",
+    "@medusajs/admin": "^7.1.4",
+    "@medusajs/cache-inmemory": "^1.8.8",
     "@medusajs/cache-redis": "^1.8.8",
     "@medusajs/event-bus-local": "^1.9.6",
     "@medusajs/event-bus-redis": "^1.8.9",
     "@medusajs/file-local": "^1.0.2",
-    "@medusajs/icons": "^1.0.0",
-    "@medusajs/medusa": "^1.16.0",
+    "@medusajs/medusa": "^1.17.1",
     "@tanstack/react-query": "4.22.0",
     "babel-preset-medusa-package": "^1.1.13",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "16.0.3",
     "express": "^4.17.2",
+    "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
+    "medusa-payment-manual": "^1.0.24",
+    "medusa-payment-stripe": "^6.0.5",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
   "peerDependencies": {
     "@medusajs/medusa": "^1.16.0",
     "react": "^18.2.0",
-    "react-router-dom": "^6.13.0"  
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
+    "@medusajs/medusa-cli": "^1.3.21",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "babel-preset-medusa-package": "^1.1.13",
+    "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
     "eslint": "^6.8.0",
     "jest": "^27.3.1",
