--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,11 @@
 JWT_SECRET=something
 COOKIE_SECRET=something
-
-DATABASE_TYPE="postgres"
 REDIS_URL=redis://localhost:6379
+DATABASE_TYPE=postgres
+DATABASE_URL=
+MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
+STORE_CORS=
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=igr-core-storefront
+DATABASE_NAME=
+DATABASE_PASSWORD=""
+DATABASE_USERNAME=
