--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "checkJs": false
+    "checkJs": false,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/admin/components/*"]
+    }
   },
   "include": ["src/"],
   "exclude": [
